# parallel-agents

./: AGENTS.md  LICENSE  LOGS.md  MANIFEST.in  README.md  pyproject.toml
batch_agent/: __init__.py  backpressure.py  checkpoint.py  cli.py  compaction.py  compiler.py  distributed.py  kvflow.py  metrics.py  priority_semaphore.py  repair.py  scheduler.py  schema.py  spec.py  state.py  utils.py
batch_agent/backends/: __init__.py  anthropic.py  bedrock.py  dynamo.py  openai.py  sglang.py  vllm.py
batch_agent/backends/vllm_patch/: __init__.py  diff_cache_engine.py  prefetch_route.py
batch_agent/runtimes/: __init__.py  opencode.py
batch_agent/tools/: __init__.py  builtin.py  pool.py  sql.py
deploy/: apply_vllm_patch.py  kvflow_benchmark.py  next_gpu_session.sh  real_redis_chaos.py  runpod_template.json  sglang_benchmark.py  vllm_server.sh
examples/: auto_research.py
scripts/: plot_opencode_h100.py  plot_tool_calls_gpu.py
tests/benchmarks/: _common.py  backend_raw_vs_batchagent.py  bedrock_cache_isolation.py  bench_opencode_baseline.py  bench_research_summary.py  code_review.py  cost_comparison.py  deep_stress_test.py  definitive_benchmark.py  fair_comparison.py  heterogeneous_tasks.py  kvflow_prefetch_accuracy.py  paper_summarization.py  prefix_cache_benchmark.py  stress_test_verification.py  test_500_agents.py  tokendance_compression.py  tool_dedup_efficiency.py
tests/benchmarks/results/adaptive_concurrency_live/: results.json
tests/benchmarks/results/backend_raw_vs_batchagent/: dynamo_qwen25_32b_h100.json  dynamo_sglang.json  qwen25_32b_h100_400ms.json  qwen25_32b_h100_400ms_gpu_samples.csv  qwen25_32b_h100_400ms_rerun.json  results_32b_batchagent.json  results_32b_naive.json  sglang_standalone.json
tests/benchmarks/results/bedrock_cache_isolation/: results.json
tests/benchmarks/results/bedrock_cache_isolation_variant_a_region/: results.json
tests/integration/: test_bedrock_backend.py  test_bedrock_live_batch.py  test_bedrock_live_compaction.py  test_distributed.py  test_distributed_scheduler.py  test_dynamo_backend.py  test_heterogeneous.py  test_live_anthropic.py  test_map_reduce_e2e.py  test_multiturn.py  test_openai_tools.py  test_prefetch_accuracy.py  test_sglang_backend.py  test_streaming_dispatch.py  test_vllm_backend.py  test_vllm_mock.py
tests/unit/: test_audit_gap_coverage.py  test_backend_capabilities_and_bedrock_concurrency.py  test_backpressure.py  test_bug_regressions.py  test_claude_code_tool.py  test_compiler.py  test_dashboard.py  test_diff_encoder.py  test_harsh_edge_cases.py  test_kvflow_advisor.py  test_map_reduce.py  test_nvext_hints.py  test_opencode_runtime.py  test_optimization_contracts.py  test_output_equivalence_audit.py  test_phase2.py  test_repair.py  test_scheduler.py  test_schema.py  test_tool_pool.py  test_utils.py  test_vllm_prefetch_route.py
(+44 files in other folders)
